<resources>
    <string name="app_name">GroceryListApp</string>

    <string name="welcome_message">Welcome to Listify</string>
    <string name="create_account">Create your account</string>
    <string name="already_registered">Already registered?</string>
    <string name="login_here">Log in here.</string>
    <string name="grocery_lists_headline">My grocery lists</string>


    <string name="bottom_nav_grocery">Grocery</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_add">Add</string>
    <string name="bottom_nav_profile">Profile</string>

    <string name="action_notifications">Notifications</string>
    <string name="action_logout">Logout</string>

    <string name="password_reset_headline">Enter your email address and birthdate to reset your password</string>
    <string name="email_hint">Email</string>
    <string name="reset_password_hint">Reset Password</string>
    <string name="cancel_button">Cancel</string>
    <string name="verify_button">Verify</string>

    <string name="registration_headline">Create your Account to start</string>
    <string name="profile_banner">Profile Banner</string>
    <string name="name_hint">Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="password_hint">Password</string>
    <string name="birthdate_hint">Date of Birth</string>
    <string name="sign_up_button">Sign Up</string>

    <string name="forgot_password_label">Forgot your password?</string>
    <string name="forgot_password_click_here">Click here</string>

    <string name="list_name_hint">List name</string>
    <string name="date_hint">Date</string>
    <string name="add_list_button">Add</string>

    <string name="item_name_hint">Item name</string>
    <string name="item_quantity_hint">0</string>
    <string name="add_item_button">+</string>
    <string name="add_item_button_desc">Add new item</string>

    <string name="password_verification_headline">Reset Your Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="save_button">Save</string>

    <string name="recycler_view_item_image">List of grocery images</string>
    <string name="recycler_view_user_input">List of grocery items</string>
    <string name="recycler_view_lists">List of grocery lists</string>
    <string name="item_image_description">Grocery item image</string>
    <string name="item_name_description">Grocery item name</string>
    <string name="item_quantity_description">Grocery item quantity</string>
    <string name="detail_items_recyclerview">List of items in the user\'s grocery list</string>
    <string name="user_lists_description">Grocery list of %1$s</string>

    <string name="delete">Delete </string>

    <string name="edit_profile">Edit Profile</string>
    <string name="profile_image">Profile Image</string>">
    <string name="select_profile_image">Select Profile Image</string>
    <string name="female_profile_one">Female Profile One</string>
    <string name="female_profile_two">Female Profile Two</string>
    <string name="male_profile_one">Male Profile One</string>
    <string name="male_profile_two">Male Profile Two</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
