<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/bake"
            android:contentDescription="@string/item_image_description"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/item_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="48dp"
            android:minHeight="48dp"
            android:hint="@string/item_name_hint"
            android:inputType="text"
            android:backgroundTint="#CCCCCC" />

        <EditText
            android:id="@+id/item_quantity"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:minHeight="48dp"
            android:inputType="number"
            android:hint="@string/item_quantity_hint"
            android:layout_marginStart="8dp"
            android:backgroundTint="#CCCCCC" />

        <CheckBox
            android:id="@+id/item_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userItemRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:contentDescription="@string/recycler_view_user_input" />

    <Button
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/add_item_button_desc"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="0dp"
        android:text="@string/add_item_button"
        android:textColor="#345374"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete" />

</LinearLayout>
