<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detail_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_name_hint"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/detail_list_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_hint"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detail_items_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/detail_items_recyclerview"/>
</LinearLayout>
