<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/profile_banner"
        android:layout_width="299dp"
        android:layout_height="189dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:backgroundTint="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/profile_banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/profile_last_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:backgroundTint="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/profile_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:backgroundTint="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/profile_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
