<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".PasswordVerificationFragment">

    <TextView
        android:id="@+id/verification_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_verification_headline"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#345374"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:backgroundTint="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/verification_headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:backgroundTint="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/save_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_password_button"
        android:backgroundTint="#50B3D1"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
