<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddListFragment"
    android:padding="24dp">

    <EditText
        android:id="@+id/list_name_input"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/list_name_hint"
        android:inputType="text"
        android:padding="12dp"
        android:backgroundTint="#CCCCCC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/list_date_input"
        app:layout_constraintHorizontal_weight="1" />

    <EditText
        android:id="@+id/list_date_input"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:hint="@string/date_hint"
        android:inputType="date"
        android:padding="12dp"
        android:backgroundTint="#CCCCCC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/list_name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1" />

    <Button
        android:id="@+id/add_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:backgroundTint="#50B3D1"
        android:text="@string/add_list_button"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/list_name_input" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemRecyclerView"
        android:layout_width="387dp"
        android:layout_height="95dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/recycler_view_description"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_list_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
